# stm32f4_cubemx_template

./: .mxproject  CMakeLists.txt  Makefile  README.md  mxproject_sample  openocd.cfg  project1.ioc
Core/Inc/: app.h  main.h
Core/Src/: app.c  main.c  stm32f4xx_it.c
test/: CMakeLists.txt
test/Inc/: app_test_c.h
test/Src/: app_test_c.c  main.cpp
